bdr.BDR.scala.error
Erreur de compilation :
BDR:16: error: identifier expected but integer literal found.
      avance(nbPas:2)
                   ^BDR:17: error: ')' expected but '}' found.
    }else if (litMessage()=='C'){
    ^BDR:18: error: identifier expected but integer literal found.
      avance(nbPas:3)
                   ^BDR:19: error: ')' expected but '}' found.
    }else if (litMessage()=='Z'){
    ^BDR:22: error: identifier expected but integer literal found.
      recule(nbPas:2)
                   ^BDR:23: error: ')' expected but '}' found.
    }else if (litMessage()=='X'){
    ^BDR:24: error: identifier expected but integer literal found.
      recule(nbPas:3)
                   ^BDR:25: error: ')' expected but '}' found.
    }else{
    ^