bdr.BDR.scala.code
var fini = false
while(fini == false){
  if (estSurMessage()){
  	if (litMessage()=='R'){
    	droite()
   		avance()
  	}else if (litMessage()=='L'){
    	gauche()
    	avance()
 		}else if (litMessage()=='I'){
    	retourne()
    	avance()
  	}else if (litMessage()=='A'){
    	avance()
  	}else if (litMessage()=='B'){
    	avance(nbPas:2)
  	}else if (litMessage()=='C'){
    	avance(nbPas:3)
  	}else if (litMessage()=='Z'){
    	recule()
  	}else if (litMessage()=='Y'){
    	recule(nbPas:2)
  	}else if (litMessage()=='X'){
    	recule(nbPas:3)
  	}else{
     	fini= true
  	}
  }else{
    fini = true
  }
}